# schunk-egu-egk-gripper

./: .gitignore  aica-package.toml
.devcontainer/: devcontainer.json
schunk_gripper_driver/: CMakeLists.txt  package.xml  setup.cfg
schunk_gripper_driver/component_descriptions/: schunk_gripper_driver_driver.json
schunk_gripper_driver/launch/: driver.launch.py
schunk_gripper_driver/schunk_gripper_driver/: driver_component.py
schunk_gripper_library/: requirements.txt
