<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>schunk_gripper_driver</name>
  <version>0.0.0</version>
  <description>ROS2 driver for SCHUNK`s EGU, EGK, and EZU mechatronic grippers</description>
  <maintainer email="stefan.scherzinger@de.schunk.com">stefan</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>schunk_gripper_library</depend>
  <depend>schunk_gripper_interfaces</depend>
  <depend>modulo_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
